# bcheradip

./: .env.db-sync.example  .env.example  .env.production.example  .gitignore  .htaccess  AGENTS.md  API_REFERENCE.md  DATABASE_SCHEMA.md  ENVIRONMENT_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LOCAL_SETUP_COMPLETE.md  MIGRATION_GUIDE.md  QUICK_START_XAMPP.md  README_XAMPP.md  RUN_LOCAL.bat  STEP_BY_STEP_XAMPP_SETUP.md  XAMPP_SETUP.md  _debug_admin_changelist_html.py  apply_location_local_address.py  book_names.csv  cheradip_subject_hsc.sql  create_env_file.bat  create_env_file.sh  fetch_and_show_locations.py  fix_xamp.py  insert_all_countries.py  mcq_ict.py  package-lock.json  package.json  passenger_wsgi.py  recreate_venv.bat  requirements.txt  setup_local.py  subject_translations.csv  subject_translations.sql  test_email.py
ailt_api/: .env.example  .env.production.example  ANDROID_CLIENT.md  README.md  ai-providers.example.json  promo-codes.example.json  pyproject.toml  requirements.txt
ailt_api/app/: config.py  deps.py  ext_database.py  main.py  models.py  schema_upgrade.py  schemas.py  security.py  seed.py
ailt_api/deploy/: BIMI_INBOX_LOGO.md  BREVO_EMAIL.md  CPANEL_EMAIL.md  CPANEL_INSTALL.md  DEPLOY_LINUX.md  FREE_EMAIL.md  HESTIACP_INSTALL.md  LLM_KEYS.md  MAIL_NOREPLY_CHERADIP.md  NGINX_INSTALL.md  SES_UBUNTU26.md  SETUP_MAIL_CHERADIP.md  SIMPLE_EMAIL.md  SMTP_AMAZON_SES.md  SMTP_GMAIL.md  SMTP_GMAIL_550.md  SMTP_RELAY.md  apache-ailt-api.conf  cheradip-ailt.service  diagnose-ailt-db.sh  diagnose-nginx-ailt.sh  email-preview-otp.html  (+9 more)
(+1504 files in other folders)
